--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -11,7 +11,9 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Display a message 
               run: echo "Hello, Github Actions!"
+            - name: cat swapi.html
+              run: catt swapi.html
